# mf-automated-perception

./: .gitignore  ARCHITECTURE_RULES.md  CLAUDE.md  Dockerfile  QUICK_REFERENCE.md  build_docker.py  build_docker.sh  global_config.yaml  install_all.sh  memo.txt  pyproject.toml  pytest.ini  readme.md  run_container_bash.sh  run_debug_container.sh  setup.bash
docker/: Dockerfile  build_docker.sh  entrypoint.sh
docker/glim/: Dockerfile  build_glim_in_docker.sh  build_glim_in_docker2.sh  entrypoint.sh  imgui.ini  version
docker/glim/config/: config_odometry_gpu.json  config_preprocess.json  config_sub_mapping_gpu.json  config_viewer.json  imgui.ini
docker/glim/config.orig/: config_ros.json
docker/glim/glim_ros2/: CMakeLists.txt
docker/mf-mantis-eye/: Dockerfile  entrypoint.sh  requirements.txt  version
examples/: apple_counting.py  params_apple_counting.py
mf_automated_perception/: env.py
mf_automated_perception/cli/: main.py
mf_automated_perception/grain/: grain_base.py  grain_factory.py  grain_manifest.py
mf_automated_perception/grain/defs/: _dummy.py  raw_rosbag.py  raw_rosbag_decoded.py  raw_rosbag_path.py  slam3d_glim.py  snapshot.py
mf_automated_perception/grain/schema/: 101_image_v1.sql  101_images_v1.sql  102_pointcloud_v1.sql  102_pointclouds_v1.sql  130_ply_v1.sql  150_snapshot_item.sql  150_snapshot_item_v1.sql  160_snapshot_header.sql  160_snapshot_v1.sql  201_bboxes_v1.sql  201_yolo_bbox_v1.sql  202_keypoints_v1.sql  202_yolo_keypoint_v1.sql  203_yolo_seg_mask_v1.sql  210_yolo_v1.sql  (+4 more)
mf_automated_perception/host_runtime/: docker_runner.py
mf_automated_perception/procedure/: procedure_base.py  procedure_factory.py
mf_automated_perception/runner/: gp_runner.py
mf_automated_perception/utils/: analyze_rosbag.py  gp_logger.py  rosbag_parser.py  time_utils.py  visualize.py
params/: decode_rosbags.yaml  locate_rosbags.yaml  offline_glim.yaml  run_sync_engine.yaml  run_yolo.yaml
scripts/: clean_build_artifacts.py
tests/grain/: test_grain.py  test_grain_factory.py  test_grain_preview.py  test_locate_rosbag_1_grain.py  test_locate_rosbag_3_grain_factory.py
tests/host/: test_framework_base.py  test_load_grain.py
tests/integration/: __test_locate_rosbag.py  __test_locate_rosbag_with_runner.py  integration_phase.py
tests/procedure/: test_locate_rosbag.py  test_locate_rosbag_2_procedure.py  test_procedure.py  test_procedure_factory.py
tests/realtime/: test_sync.py
vis/: rerun_sample.py
(+42 files in other folders)
